observability/k8s/rabbitmq-external.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  labels:
    app.kubernetes.io/name: rabbitmq-external
spec:
  type: ExternalName
  externalName: rabbitmq.crm.svc.cluster.local
  ports:
    - name: prometheus
      port: 15692
